--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home">Main Home</a>
+              <a class="nav-link active" aria-current="page" href="https://ry-co.netlify.app/">Main Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#home">Home</a>
